--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/testproject1_db
 spring.datasource.username=root
 spring.datasource.password=root
+
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=ERROR
+logging.level.org.ksusha=DEBUG
